--- a/Week-7-Titanic.ipynb
+++ b/Week-7-Titanic.ipynb
@@ -290,6 +290,8 @@
     }
    ],
    "source": [
+    "# This line calculates the total number of missing (null) values in each column of the 'data_select' DataFrame\n",
+    "# and returns a series with the column names and their corresponding missing value counts.\n",
     "data_select.isnull().sum()"
    ]
   },
@@ -307,14 +309,23 @@
     }
    ],
    "source": [
-    "# We see that there is only 1 null value in fare. This can be easily filled by imputing it with the mean fare value of the class the passenger belongs\n",
+    "# We see that there is only 1 null value in the 'fare' column. \n",
+    "# This missing value can be filled by imputing it with the mean fare value of the class the passenger belongs to.\n",
     "\n",
+    "# Step 1: Identify the passenger class (pclass) of the row where 'fare' is missing\n",
     "pclass = data_select[data_select[\"fare\"].isnull()].iloc[0][\"pclass\"]\n",
-    "# get the row index too\n",
+    "\n",
+    "# Step 2: Get the row index of the missing fare value, which we will use to fill in the imputed value\n",
     "index = data_select[data_select[\"fare\"].isnull()].index[0]\n",
-    "mean_pclass = data_select[data_select[\"pclass\"]==pclass][\"fare\"].mean()\n",
+    "\n",
+    "# Step 3: Calculate the mean fare for the identified passenger class (pclass)\n",
+    "mean_pclass = data_select[data_select[\"pclass\"] == pclass][\"fare\"].mean()\n",
+    "\n",
+    "# Step 4: Print a message with the calculated mean value, which will be used to fill the missing fare value\n",
     "print(f\"We can impute the missing fare with the mean fare of the passenger class the particular passenger belongs to. The mean value is {mean_pclass}\")\n",
-    "data_select.at[index,\"fare\"] = np.round(mean_pclass,3)\n"
+    "\n",
+    "# Step 5: Assign the calculated mean fare value to the missing 'fare' cell, rounded to three decimal places for consistency\n",
+    "data_select.at[index, \"fare\"] = np.round(mean_pclass, 3)\n"
    ]
   },
   {
@@ -345,7 +356,12 @@
    ],
    "source": [
     "# The Age has 263 missing values. It is better to impute the age based on gender. As they have different distributions\n",
-    "sns.kdeplot(data_select,x=\"age\",hue=\"sex\")"
+    "# This line creates a Kernel Density Estimate (KDE) plot of the 'age' distribution in the 'data_select' DataFrame,\n",
+    "# separated by the 'sex' category, using Seaborn's kdeplot function.\n",
+    "# - 'data_select' specifies the DataFrame to use for the plot.\n",
+    "# - 'x=\"age\"' sets the 'age' column as the variable for the x-axis, representing age distribution.\n",
+    "# - 'hue=\"sex\"' colors the KDE plots by the 'sex' column, allowing comparison between male and female age distributions.\n",
+    "sns.kdeplot(data_select, x=\"age\", hue=\"sex\")\n"
    ]
   },
   {
@@ -354,9 +370,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Here we impute null values\n",
-    "data_select.loc[data_select[(data_select[\"age\"].isnull()) & (data_select[\"sex\"]==\"female\")].index,\"age\"] = data_select[data_select[\"sex\"]==\"female\"][\"age\"].mean()\n",
-    "data_select.loc[data_select[(data_select[\"age\"].isnull()) & (data_select[\"sex\"]==\"male\")].index,\"age\"] = data_select[data_select[\"sex\"]==\"male\"][\"age\"].mean()"
+    "# Here we impute (fill) null values in the 'age' column based on the mean age for each gender.\n",
+    "# We do this separately for males and females to maintain demographic-specific averages.\n",
+    "\n",
+    "# Step 1: For rows where 'age' is null and 'sex' is female:\n",
+    "# - Locate these rows in the 'data_select' DataFrame by using 'loc' and applying a conditional filter.\n",
+    "# - The condition filters rows where 'age' is null and 'sex' is \"female\".\n",
+    "# - We then fill the missing 'age' values for these rows with the mean age of all females in the dataset.\n",
+    "data_select.loc[data_select[(data_select[\"age\"].isnull()) & (data_select[\"sex\"] == \"female\")].index, \"age\"] = data_select[data_select[\"sex\"] == \"female\"][\"age\"].mean()\n",
+    "\n",
+    "# Step 2: Similarly, for rows where 'age' is null and 'sex' is male:\n",
+    "# - Use 'loc' to target rows with a null 'age' value and where 'sex' is \"male\".\n",
+    "# - Fill these missing 'age' values with the mean age of all males in the dataset.\n",
+    "data_select.loc[data_select[(data_select[\"age\"].isnull()) & (data_select[\"sex\"] == \"male\")].index, \"age\"] = data_select[data_select[\"sex\"] == \"male\"][\"age\"].mean()\n"
    ]
   },
   {
@@ -435,7 +461,18 @@
    "source": [
     "# This plot shows the distribution of passenger age  based on who survived or not\n",
     "\n",
-    "sns.catplot(x=\"survived\", y=\"age\", col=\"pclass\", data=data_select, kind=\"swarm\",palette=\"pastel\")"
+    "# This line creates a categorical (cat) plot to visualize the relationship between survival status and age, \n",
+    "# separated by passenger class (pclass), using a swarm plot layout.\n",
+    "# \n",
+    "# - 'x=\"survived\"' sets the 'survived' column on the x-axis, showing survival status (0 for not survived, 1 for survived).\n",
+    "# - 'y=\"age\"' sets the 'age' column on the y-axis, plotting passenger ages for each survival status.\n",
+    "# - 'col=\"pclass\"' creates separate plots (facets) for each unique value in the 'pclass' column (passenger class),\n",
+    "#    showing different plots for each class (e.g., first, second, and third class).\n",
+    "# - 'data=data_select' specifies that the data to be plotted is from the 'data_select' DataFrame.\n",
+    "# - 'kind=\"swarm\"' chooses a swarm plot, which displays each data point as an individual marker on the plot.\n",
+    "#    Swarm plots are useful for showing the distribution and density of individual data points without overlap.\n",
+    "# - 'palette=\"pastel\"' applies a pastel color palette to make the plot visually distinct and clear.\n",
+    "sns.catplot(x=\"survived\", y=\"age\", col=\"pclass\", data=data_select, kind=\"swarm\", palette=\"pastel\")\n"
    ]
   },
   {
@@ -468,7 +505,18 @@
     "# This plot shows the distribution of passenger fare  based on who survived or not\n",
     "# Interestingly the fare range is simlar for class 2 and 3 but highly variable in class 1. Particularly for the Survivors\n",
     "\n",
-    "sns.catplot(x=\"survived\", y=\"fare\", col=\"pclass\", data=data_select, kind=\"swarm\",palette=\"pastel\")"
+    "# This line creates a categorical plot to examine the relationship between survival status and fare amount,\n",
+    "# separated by passenger class (pclass), using a swarm plot layout.\n",
+    "#\n",
+    "# - 'x=\"survived\"' sets the 'survived' column on the x-axis, indicating survival status (0 for not survived, 1 for survived).\n",
+    "# - 'y=\"fare\"' sets the 'fare' column on the y-axis, showing the fare amount for each survival status.\n",
+    "# - 'col=\"pclass\"' creates separate plots (facets) for each unique value in the 'pclass' column (passenger class),\n",
+    "#    resulting in different plots for each class (e.g., first, second, and third class).\n",
+    "# - 'data=data_select' specifies that the plot will use data from the 'data_select' DataFrame.\n",
+    "# - 'kind=\"swarm\"' selects a swarm plot type, which shows each fare as an individual data point on the plot,\n",
+    "#    helping to visualize the distribution of fare values without overlapping points.\n",
+    "# - 'palette=\"pastel\"' applies a pastel color scheme for a visually clear and gentle color distinction.\n",
+    "sns.catplot(x=\"survived\", y=\"fare\", col=\"pclass\", data=data_select, kind=\"swarm\", palette=\"pastel\")\n"
    ]
   },
   {
